# slog

./: .clang-format  .clang-tidy  .gitignore  CHANGELOG.md  CMakeLists.txt  Makefile  README.md  idf_component.yml
.github/: FUNDING.yml
.github/workflows/: bump-esp-idf-project-template.yml  checks.yml  formatting.yml  release-please.yml
.release-please/: config.json
include/: slog.h
include/slog/platform/: esp.h  generic.h
src/: generic.c  slog.c
src/platform/: esp.c  generic.c
tests/: CMakeLists.txt  test_generic.c  test_slog.c
